# witcraft-lsp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/witcraft-lsp/: Cargo.toml
crates/witcraft-lsp/src/: lib.rs  main.rs  server.rs
crates/witcraft-lsp/src/document/: mod.rs  store.rs
crates/witcraft-lsp/src/workspace/: mod.rs  package_index.rs  resolver.rs
crates/witcraft-syntax/: Cargo.toml
crates/witcraft-syntax/benches/: parse.rs
crates/witcraft-syntax/src/: ast.rs  format.rs  index.rs  kind.rs  lexer.rs  lib.rs  lookup.rs  parse.rs  parser.rs  text.rs
crates/witcraft-syntax/tests/: wasi_integration.rs
editors/vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/basic/: api.wit  resources.wit  types.wit  world.wit
examples/cross-file/: api.wit  types.wit
examples/wasi/: insecure.wit
