[package]
name = "witcraft-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for WIT (WebAssembly Interface Types)"
repository = "https://github.com/ihorandrianov/witcraft-lsp"
keywords = ["wit", "wasm", "webassembly", "lsp", "language-server"]
categories = ["development-tools", "wasm"]

[lib]
name = "witcraft_lsp"
path = "src/lib.rs"

[[bin]]
name = "witcraft-lsp"
path = "src/main.rs"

[dependencies]
witcraft-syntax.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap = "6"

[dev-dependencies]
serde_json = "1"
tower = "0.4"
futures-core = "0.3"
